fix: issue with collapsed elements not loosing value

--- a/apps/client/src/common/components/view-params-editor/ViewParamsSection.module.scss
+++ b/apps/client/src/common/components/view-params-editor/ViewParamsSection.module.scss
@@ -44,3 +44,7 @@
   transition: rotate 300ms cubic-bezier(0.45, 1.005, 0, 1.005);
   rotate: 180deg;
 }
+
+.hidden {
+  display: none;
+}
